fix layout shift

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,3 +9,9 @@
     --color-gray-200: #e6e9ed;
     --color-gray-600: #95989c;
 }
+
+html,
+body {
+    overflow-y: hidden;
+}
+
